#ifndef JETONS_H
#define JETONS_H

#include <iostream>
#include <string>
#include <array>
#include <vector>
#include <tuple>

//Gestion des jetons et des privileges pour splendor duel

//Gestion des exceptions liées aux jetons
class JetonException
{
public:
    JetonException(const std::string& i) :info(i) {}
    std::string getInfo() const { return info; }
private:
    std::string info;
};

//Gestion des exceptions liées aux privilèges
class PrivilegeException
{
public:
    PrivilegeException(const std::string& i) :info(i) {}
    std::string getInfo() const { return info; }
private:
    std::string info;
};

//Enum pour les couleurs : initialiser, to string, affichage.
enum class CouleurJeton { RUBIS, SAPHIR, ÉMERAUDE, ONYX, DIAMANT, OR, PERLE };
std::string toString(CouleurJeton c);
std::ostream& operator<<(std::ostream& f, CouleurJeton c);
extern std::initializer_list<CouleurJeton> CouleursJeton;

//Classe Jetons
class Jeton {
    private :
        const CouleurJeton couleur;
    public :
        Jeton(CouleurJeton c) : couleur(c) {}
        CouleurJeton getCouleur() const { return couleur; }
};
std::ostream& operator<< (std::ostream& f, const Jeton& jeton);

class LotDeJetons {
    private :
        std::vector<const Jeton*> jetons;
        //max de chaque jetons
        const size_t max_or = 3;
        const size_t max_perle = 2;

        const size_t max_rubis = 4;
        const size_t max_onyx = 4;
        const size_t max_saphir = 4;
        const size_t max_dimant = 4;
        const size_t max_emeraude = 4;
    public:
        size_t getNbJetons() const { return jetons.size(); }
        const Jeton& getJetons(size_t i) const;
        LotDeJetons();
        ~LotDeJetons();

        //pas de duplication du lot de jetons
        LotDeJetons(const LotDeJetons&) = delete;
        LotDeJetons& operator=(const LotDeJetons&) = delete;
};

class Privilege {
    //pas d'attribut ni méthode : les 3 privilèges sont identiques
};
std::ostream& operator<< (std::ostream& f, const Privilege& privilege);

class LotPrivileges {
    private :
        std::vector<const Privilege*> privileges;
        const size_t max_privileges = 3;
    public :
        size_t getNbPrivileges() const { return privileges.size(); }
        const Privilege& getPrivilege(size_t i) const;
        LotPrivileges();
        ~LotPrivileges();

        //pas de duplication du lot
        LotPrivileges(const LotPrivileges&) = delete;
        LotPrivileges& operator=(const LotPrivileges&) = delete;
};

class Sac {
    //Le sac de jetons contient tous les jetons qui ne sont ni dans la main des joueurs ni sur le plateau
    //Au debut de la partie, le plateau est pleins, le sac est donc vide au même titre que la main des joueurs
    private :
        std::vector<const Jeton*> jetons;
    public :
        explicit Sac(const LotDeJetons& lot);
        bool estVide() const { return jetons.empty(); }
        size_t getNbJetons() const { return jetons.size(); }
        void ajouterJeton(const Jeton& j);
        const Jeton& piocherJeton();

        //pas de duplication de sac
        Sac(const Sac&) = delete;
        Sac& operator=(const Sac&) = delete;
};

class Plateau {
    //Le plateau est une matrice de jetons
    private : 
        std::array<std::array<const Jeton*, 5>, 5> jetons;
        std::vector<const Privilege*> privileges;
    public :

        //const Jeton& recupererJeton(const size_t i, const size_t j);
        const Jeton& recupererJeton(const size_t i, const size_t j);
        const Privilege& recupererPrivilege();
        void positionerJeton(const Jeton& jeton);
        void poserPrivilege(const Privilege& privilege);
        void remplirPlateau(Sac& sac);
        bool estVide() const;
        Plateau(Sac& sac, const LotPrivileges& lotp);

        //pas de duplication du plateau
        Plateau(const Plateau&) = delete;
        Plateau& operator=(const Plateau&) = delete;
};

#endif
